# asmtransformers

./: .gitattributes  CONTRIBUTING.md  README.md
.github/workflows/: asmtransformers.yml  citatio.yml
asmtransformers/: README.md  job-script.sh  pretrain.Containerfile  pyproject.toml
asmtransformers/asmtransformers/: arm64.py  operands.py  risc-v.py  riscv.py  x86.py
asmtransformers/asmtransformers/datasets/: __init__.py  sentencelabel.py
asmtransformers/asmtransformers/models/: __init__.py  asmbert.py  asmsentencebert.py  embedder.py  finetuning.py  st_compat.py
asmtransformers/asmtransformers/models/arm64bert/: config.json  vocab.txt
asmtransformers/asmtransformers/models/multilingual_asmbert/: config.json  config_large.json  tokenizer.json  tokenizer_config.json  vocab.txt
asmtransformers/asmtransformers/preprocessors/: __init__.py  arm64.py  riscv.py  x86.py
asmtransformers/docs/: architecture.md  pretraining.md
asmtransformers/scripts/: count_tokens.py  evaluation.py  finetune.py  ft-datasets.py  inference.py  mktokenizer.py  mkvocab.py  oversample_quality.py  pickle2hf.py  preprocess.py  pretrain.py  quality_score.py  slurm_pretrain.sh  tokenize_dataset.py
asmtransformers/tests/: test_arm64.py  test_asmbert.py  test_asmsentencebert.py  test_asmsentencebert_freeze.py  test_embedder.py  test_evaluation.py  test_finetuning.py  test_mktokenizer.py  test_operand_formatters.py  test_pretrain.py  test_riscv.py  test_sentencelabel.py  test_st_compat.py  test_x86.py
citatio/: README.md  pyproject.toml
citatio/citatio/: __init__.py  api.py  db.py  models.py  schema-postgresql.sql  schema-sqlite.sql
citatio/tests/: conftest.py  functions.json  functions.npy  test_api.py  test_db.py  test_db_postgresql.py  test_db_sqlite.py  test_models.py
examples/atf/: README.md  Sententia_arm-trusted-firmware_demo.gar  sententia-demo-O2-bl31.db  sententia-demo-O2.db
sententia/: .gitignore  README.md  build.gradle  extension.properties
sententia/ghidra_scripts/: AddSymbolsToSententiaDB.java
sententia/src/main/java/nl/nfi/sententia/: DowngradingHTTPClient.java  FunctionDescriptor.java  SententiaAPI.java  SententiaAnalyzer.java  SententiaPlugin.java  SententiaResult.java  SententiaUtil.java
