[build-system]
requires = ["pdm-backend", "verri"]
build-backend = "pdm.backend"

[project]
dynamic = ["version"]
name = "citatio"
description = "REST API for the ingestion and subsequent search of Ghidra-CFG-based assembly code."
license = "EUPL-1.2"
authors = [
    {name = "Netherlands Forensic Institute", email = "netherlandsforensicinstitute@users.github.com"},
    {name = "Ranieri Argentini", email = "1196121+ranieri@users.noreply.github.com"},
    {name = "Edwin Rijgersberg", email = "8604946+Rijgersberg@users.noreply.github.com"},
    {name = "Mattijs Ugen", email = "144798+akaIDIOT@users.noreply.github.com"},
    {name = "Judith van de Wetering", email = "22766364+judithvdw@users.noreply.github.com"},
    {name = "Anne Fleur van Luenen", email = "50952036+fleurvanl@users.noreply.github.com"},
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "asmtransformers @ file:///${PROJECT_ROOT}/../asmtransformers",
    "asyncpg>=0.31.0",
    "confidence>=0.17.2",
    "datasets",
    "fastapi[all]>=0.115.12",
    "fastapi-oidc>=0.1.0",
    "numpy",
    "pgvector>=0.4.2",
    "pydantic>=2.11.5",
    "scipy",
    "sqlite-vec>=0.1.6",
    "torch",
    "transformers",
]

[dependency-groups]
check = [
    "ruff>=0.11.9",
]
dev = [
    "-e file:///${PROJECT_ROOT}/../asmtransformers",
]
test = [
    "coverage>=7.8.0",
    "httpx2",  # avoid deprecation warnings for fastapi / starlette tests
    "pytest>=8.3.5",
    "pytest-asyncio>=1.4.0",
    "testcontainers[postgres]>=4.14.2",
]

[tool.pdm.version]
source = "call"
getter = "verri.tasty:pineapple"

[tool.pdm.scripts]
all = {composite = [
    "check",
    "test",
    "integration-test",
    "report",
]}
check = {composite = [
    "pdm lock --check",
    "ruff format --diff citatio/ tests/",
    "ruff check citatio/ tests/",
]}
fix = {composite = [
    "ruff format citatio/ tests/",
    "ruff check --fix citatio/ tests/",
]}
integration-test = "coverage run --append --branch --source citatio --module pytest --strict-markers -m 'postgresql' tests/"
report = "coverage report"
test = "coverage run --branch --source citatio --module pytest --strict-markers -m 'not postgresql' tests/"

[tool.pytest]
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"
markers = ["postgresql", "sqlite"]

[tool.ruff]
format.quote-style = "single"
line-length = 120
lint.flake8-quotes.inline-quotes = "single"
lint.ignore = [
    # enforced by the formatter, not ignoring this causes warnings
    "COM812",
    # 'r' is the default mode for builtin open(), but explicit is better than implicit
    "UP015",
]
lint.isort.lines-after-imports = 2
lint.select = ["A", "B", "COM", "C4", "DTZ", "E", "F", "I", "N", "Q", "SIM", "UP"]
